# pycrdt-websocket

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  README.md  RELEASE.md  environment-dev.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: test.yml
contributing/: index.html
docs/: contributing.md  install.md
docs/reference/: ASGI_server.md  Django_Channels.md  Django_Channels_consumer.md  Room.md  Store.md  WebSocket.md  WebSocket_provider.md  WebSocket_server.md
docs/usage/: WebSocket_API.md  client.md  server.md
install/: index.html
pycrdt_websocket/: __init__.py  asgi_server.py  awareness.py  django_channels_consumer.py  websocket.py  websocket_provider.py  websocket_server.py  yroom.py  ystore.py  yutils.py
pycrdt_websocket/django_channels/: __init__.py  django_channels_consumer.py  yjs_consumer.py  yroom_storage.py
pycrdt_websocket/django_channels/storage/: base_yroom_storage.py  redis_yroom_storage.py
reference/ASGI_server/: index.html
reference/Django_Channels_consumer/: index.html
reference/Room/: index.html
reference/Store/: index.html
reference/WebSocket/: index.html
reference/WebSocket_provider/: index.html
reference/WebSocket_server/: index.html
tests/: conftest.py  test_asgi.py  test_awareness.py  test_pycrdt_yjs.py  test_server.py  test_yroom.py  test_ystore.py  utils.py  yjs_client_0.js  yjs_client_1.js  yjs_client_2.js
usage/WebSocket_API/: index.html
usage/client/: index.html
usage/server/: index.html
