[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pycrdt-websocket"
dynamic = ["version"]
description = "WebSocket connector for pycrdt"
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "David Brochart", email = "david.brochart@gmail.com" },
]
keywords = [
    "websocket",
    "yjs",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "anyio >=3.6.2,<5",
    "aiosqlite >=0.18.0,<1",
    "pycrdt >=0.8.1,<0.9.0",
]

[project.optional-dependencies]
test = [
    "mypy",
    "pre-commit",
    "pytest",
    "pytest-asyncio",
    "websockets >=10.0",
    "uvicorn",
]
docs = [
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings-python",
]
django = [
    "channels",
]

[project.urls]
Homepage = "https://github.com/jupyter-server/pycrdt-websocket"
Source = "https://github.com/jupyter-server/pycrdt-websocket"
Issues = "https://github.com/jupyter-server/pycrdt-websocket/issues"
Pypi = "https://pypi.org/project/pycrdt-websocket"

[tool.hatch.version]
path = "pycrdt_websocket/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/pycrdt_websocket",
    "/tests",
]

[tool.flake8]
ignore = "E501, W503, E402"
exclude = [
    ".github",
]
enable-extensions = "G"
extend-ignore = [
    "G001", "G002", "G004", "G200", "G201", "G202",
    # black adds spaces around ':'
    "E203",
]
