[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pycrdt-websocket"
dynamic = ["version"]
description = "WebSocket connector for pycrdt"
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "David Brochart", email = "david.brochart@gmail.com" },
]
keywords = [
    "websocket",
    "yjs",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "anyio >=3.6.2,<5",
    "sqlite-anyio >=0.2.1,<0.3.0",
    "pycrdt >=0.8.16,<0.9.0",
]

[project.optional-dependencies]
test = [
    "mypy !=1.10.0",  # see https://github.com/python/mypy/issues/17166
    "pre-commit",
    "pytest",
    "pytest-timeout",
    "httpx-ws >=0.5.2",
    "hypercorn >=0.16.0",
    "trio >=0.25.0",
    "sniffio",
]
docs = [
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings-python",
]
django = [
    "channels",
]

[project.urls]
Homepage = "https://github.com/jupyter-server/pycrdt-websocket"
Source = "https://github.com/jupyter-server/pycrdt-websocket"
Issues = "https://github.com/jupyter-server/pycrdt-websocket/issues"
Pypi = "https://pypi.org/project/pycrdt-websocket"

[tool.hatch.version]
path = "pycrdt_websocket/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/pycrdt_websocket",
    "/tests",
]

[tool.ruff]
line-length = 99
lint.select = [
    "ASYNC",        # flake8-async
    "E", "F", "W",  # default Flake8
    "G",            # flake8-logging-format
    "I",            # isort
    "ISC",          # flake8-implicit-str-concat
    "PGH",          # pygrep-hooks
    "RUF100",       # unused noqa (yesqa)
    "UP",           # pyupgrade
]
